# simple-torch-model

./: .gitignore  README.md  dummy.py  model.pte  pyproject.toml
src/simple_model/: __init__.py  exporter.py  model.py  runner.py
src/simple_model/cli/: common.py  execute.py  export.py
